--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__
 env
 .env
 venv
+.env
+services/__pycache__/pdf_service.cpython-311.pyc
+services/__pycache__/query_service.cpython-311.pyc
