--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 flask
-langchain==0.0.267
 python-dotenv
 PyMuPDF
 flask_cors
 openai
 PyPDF2
-boto3
+unstructured
+chromadb==0.3.26
+openapi-schema-pydantic==1.2.4
+pydantic==1.10.8
+tiktoken==0.6.0
+openai==1.21.2
+langsmith==0.1.48
+langchain==0.1.16
+langchain-openai==0.1.3
